Lab 2/ITCenter.html

--- a/public_html/Lab 2/style.css
+++ b/public_html/Lab 2/style.css
@@ -5,3 +5,12 @@ p {
     text-indent: 50px;
     text-align: justify;
 }
+#id1{
+    color: violet;
+}
+.class01{
+    color: #CC9900;
+}
+h1 {
+    color: pink;
+}
